# noise2read

./: .gitignore  .readthedocs.yaml  LICENSE  README.rst  requirements.txt  setup.cfg
CaseStudies/AbundanceLevel/: Monkeypox_run.sh  SARS_Cov_2_draw.py  SARS_Cov_2_run.sh  get_coverage.py  get_coverage.sh  monkey_draw.py  readme.md
CaseStudies/AbundanceLevel/bowtie2-2.4.4-linux-x86_64/: .README.md.swp  MANUAL
CaseStudies/IsomiRs_SNPs/: correction.py  cutadapters.py
CaseStudies/IsomiRs_SNPs/isoMiRmap/: IsoMiRmap.py  analysis.py  run.py
Examples/simulated_miRNAs/: D14.ini
config/: D1.ini  D10.ini  D10_sim.ini  D11.ini  D11_sim.ini  D12.ini  D12_sim.ini  D13.ini  D13_sim.ini  D14.ini  D14_without_high.ini  D15.ini  D15_without_high.ini  D16.ini  D16_without_high.ini  D17.ini  D17_without_high.ini  D18.ini  D19.ini  D1_D8_config.ini  D2.ini  D20.ini  D21.ini  D2_amplicon.ini  D3.ini  D4.ini  D5.ini  D6.ini  D7.ini  D7_amplicon.ini  D8.ini  D8_amplicon.ini  D9.ini  D9_sim.ini  config.ini  default_config.ini  quick_test.ini  real_umi_conig.ini  simulated_miRNA.ini  simulation.ini
config/D14_D17/: D14.ini  D14_without_high.ini  D15.ini  D15_without_high.ini  D16.ini  D16_without_high.ini  D17.ini  D17_without_high.ini
config/D18_D21/: D18.ini  D20.ini  D21.ini
config/D22_D31/: D24.ini  D25.ini  D26.ini  D31.ini
config/D34_D41/: D34.ini  D36.ini  D37.ini  D38.ini  D39.ini  D40.ini
configs/: default_config.ini  quick_test.ini
configs/D18_D21/: D19.ini
configs/D22_D31/: D22.ini  D23.ini  D27.ini  D28.ini  D29.ini  D30.ini
configs/D34_D41/: D35.ini  D41.ini
docs/: conf.py  make.bat  requirements.txt
docs/source/: QuickStart.rst  conf.py  index.rst
examples/: D1_D8_config.ini  simulation.ini
examples/D1-D8/: config.ini  run.py
get_coverage/: draw.py  readme.md  run.sh
src/noise2read/: __init__.py  classifier.py  config.py  coverage.py  data_analysis.py  data_generation.py  data_preprocessing.py  encoding.py  error_orrection.py  isolates_correction.py  noise2read.py  reads2vectors.py  simulation.py  umi_read_correction.py  umitest.py  utils.py
tests/: ParametersUsed.txt  bankBcalm.txt  original_reads.fa  test_data_generation.py  test_reads2vector.py  test_utils.py
tests/logs/: logBcalm
(+106 files in other folders)
