[metadata]
name = noise2read
project-logo = ./logo/logo.svg
version = attr: noise2read.__version__
author = Penagyao Ping
author_email = ping.pengyao@gmail.com
description = Turn noise to read
# long_description = file: README.rst 
long_description = file: README.rst
long_description_content_type = text/x-rst
# long_description_content_type = text/markdown
url = https://github.com/Jappy0/noise2read
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
include_package_data = True
zip_safe = False
install_requires =
    biopython == 1.79
    xgboost == 1.6.1
    Xlsxwriter == 3.0.3
    tqdm == 4.64.0
    scikit-learn == 1.1.1
    networkx == 2.8.5
    pandas == 1.4.3
    optuna == 2.10.1
    matplotlib == 3.5.2
    mpire >= 2.5.0
    editdistance == 0.6.0
    imbalanced-learn == 0.9.1
    seaborn >= 0.12.1

[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    noise2read = noise2read.noise2read:main
