[metadata]
name = noise2read
project_logo = ./logo/logo.svg
version = attr: noise2read.__version__
author = Penagyao Ping
author_email = ping.pengyao@gmail.com
description = Turn noise to read
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Jappy0/noise2read
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.11
include_package_data = True
zip_safe = False
install_requires =
    biopython == 1.79
    xgboost == 1.6.1
    Xlsxwriter == 3.0.3
    tqdm == 4.66.1
    scikit-learn == 1.3
    networkx == 2.8.5
    pandas == 2.1.0
    optuna >= 3.1.1
    matplotlib >= 3.5.2
    mpire >= 2.8.0
    editdistance == 0.6.2
    imbalanced-learn == 0.9.1
    seaborn >= 0.12.1
    psutil == 5.9.5

[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    noise2read = noise2read.noise2read:main
